--- a/Resume.tex
+++ b/Resume.tex
@@ -1,96 +1,96 @@
-% Document class and font size
 \documentclass[a4paper,9pt]{extarticle}
+\usepackage[utf8]{inputenc}
+\usepackage{geometry}
+\usepackage{titlesec}
+\usepackage{enumitem}
+\usepackage{hyperref}
 
-% Packages
-\usepackage[utf8]{inputenc} % For input encoding
-\usepackage{geometry} % For page margins
-\geometry{a4paper, margin=0.3in} % Set paper size and margins
-\usepackage{titlesec} % For section title formatting
-\usepackage{enumitem} % For itemized list formatting
-\usepackage{hyperref} % For hyperlinks
+\geometry{a4paper, margin=0.3in} 
+\setlist{noitemsep} 
+\titleformat{\section}{\large\bfseries}{\thesection}{1em}{}[\titlerule] 
+\titlespacing*{\section}{0pt}{\baselineskip}{\baselineskip} 
 
-% Formatting
-\setlist{noitemsep} % Removes item separation
-\titleformat{\section}{\large\bfseries}{\thesection}{1em}{}[\titlerule] % Section title format
-\titlespacing*{\section}{0pt}{\baselineskip}{\baselineskip} % Section title spacing
 
-% Begin document
 \begin{document}
 
-% Disable page numbers
 \pagestyle{empty}
 
-% Header
 \begin{center}
-    \textbf{\Large Srivathsan S}\\[2pt] % Name
+    \textbf{\Large Srivathsan S}\\[2pt] 
     Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.linkedin.com/in/vathsan64}{linkedin.com/in/vathsan64} | Chennai,
-    India % Contact info
+    India 
 \end{center}
 
-% Education Section
+
 \section*{EDUCATION}
 \noindent
-\textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\ % University name and location
+\textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\ 
 Masters in Physics - Quantum Technologies\\
 Coursework: Introduction to Quantum Information Science, Open Quantum Systems, Quantum Materials and Nanophotonics, Quantum Computation and
-Algorithms, Physical Implementations of Quantum Technology\\% Additional info
+Algorithms, Physical Implementations of Quantum Technology\\
 
 \noindent
-\textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\ % University name and location
+\textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\ 
 Bachelor of Technology - Information and Communication Technology\\
 Coursework: Data Structures and Algorithms, Machine Learning, Artificial Intelligence, Cryptography, Theory of Computation, Data Mining,
-DBMS, Operating Systems, Networking. % Additional info
+DBMS, Operating Systems, Networking.
 
-% Experience Section
 \section*{EXPERIENCE}
 \noindent
-\textbf{Company Name} \hfill City, State\\ % Company name and location
-\textit{Position Title} \hfill Month Year - Month Year % Position and duration
-\begin{itemize}
-    \item Description of responsibilities and achievements at this position. % Job responsibilities and achievements
-\end{itemize}
-
-% Additional Experience or Volunteer Work
-\noindent
-\textbf{Project or Volunteer Work Name} \hfill City, State\\ % Project or organization name and location
-\textit{Position Title, Volunteer} \hfill Month Year – Month Year % Position and duration
-\begin{itemize}
-    \item Description of responsibilities and achievements at this position. % Responsibilities and achievements
-\end{itemize}
+\textbf{Tata Consultancy Services} \hfill Chennai, India\\
+\textit{Systems Engineer} \hfill Nov 2020 - Jul 2023\\
+Develop, Maintain and Upgrade legacy systems of client Kemper Insurance in BFSI Domain in the Unix and PL/SQL tech stack.
+Spearheaded and Initiated many projects to alleviate technology bottleneck by gaining the Contextual Master level in the
+domain.\\
 
 \noindent
-% Club or Organization Experience
-\textbf{Club or Organization Name} \hfill City, State\\ % Club or organization name and location
-\textit{Position Title} \hfill Month Year – Ongoing % Position and duration
-\begin{itemize}
-    \item Description of responsibilities and achievements at this position. % Responsibilities and achievements
-\end{itemize}
+\textbf{Freezon Labs} \hfill Chennai, India\\
+\textit{Full Stack Developer} \hfill Jul 2020 - Oct 2020\\
+Design and develop as part of a 2-man team an Invoice Processing Machine Learning pipeline in React and Flask called Finvoice.
+The Machine learning algorithm detected tables and text and classified it based on context which can be viewed in specially designed dashboard.\\
 
-% Projects Section
+\noindent
+\textbf{Tata Consultancy Services} \hfill Chennai, India\\
+\textit{Developer Intern} \hfill Jan 2020 - Apr 2020\\
+Worked on developing a mobile application in Flutter Framework as part of a software suite. Also analysed on different ways of
+Unit and Integration testing a Flutter app and deployment to a CI/CD pipeline.\\
+
+\noindent
+\textbf{Poornaprajna Institute of Scientific Research} \hfill Bengaluru, India\\
+\textit{Student Intern} \hfill May 2019 - Jun 2019\\
+Attended leactures by Prof. R.Srikant on Mathematical methods of Physics such as Vector Spaces, Partial Differential Equations; Fourier and Laplace transforms, Lagrangian and Hamiltonian Interpretations, Solving Schrodinger’s
+Equation for various scenarios.\\
+
+\noindent
+\textbf{Synergita Systems} \hfill Chennai, India\\
+\textit{Developer Intern} \hfill Nov 2018 - Dec 2018\\
+Learnt and researched the various methods of analysing data in Natural Language Processing. Designed and Implemented a
+program to automatically categorise company support tickets into various departments using LDA and Guided LDA.
+
 \section*{PROJECTS}
 \noindent
-\textbf{Project Name} \hfill City, State\\ % Project name and location
-\textit{Project Link:} \url{https://github.com/username/projectname} \hfill Month Year - Status % Project link and duration
-\begin{itemize}
-    \item Description of the project and your contributions. % Project description and contributions
-\end{itemize}
+\textbf{iGEM 2019} \hfill \url{https://2019.igem.org/Team:SASTRA_Thanjavur}\\
+Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
+Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
+Markers.
 
-% Additional Project
 \noindent
-\textbf{Project Name} \hfill City, State\\ % Project name and location
-\textit{Project Link:} \url{https://www.projectwebsite.com/} \hfill Month Year % Project link and duration
-\begin{itemize}
-    \item Description of the project and your contributions. % Project description and contributions
-\end{itemize}
+\textbf{SASTRA Mess App} \hfill \url{https://yumsastra.vathzen.in}\\
+Developed a Mobile App for ordering food in College Mess. Full stack development of the app includes a Golang backend,
+Postgres Database and Ionic Frontend.
 
-% Skills Section
+\noindent
+\textbf{National Disaster Management App}\\
+Developed Backend for a Mobile Application as part of SASTRA University team for the Govt. of Tamilnadu for the use of
+Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.\\
+
 \section*{SKILLS}
 \begin{itemize}
-    \item \textbf{Relevant Coursework:} List of relevant courses you have taken. % Relevant coursework
-    \item \textbf{Programming:} List of programming languages you are proficient in. % Programming skills
-    \item \textbf{Software:} List of software you are proficient in. % Software skills
-    \item \textbf{Communication:} List of communication skills you possess. % Communication skills
+    \item \textbf{Relevant Coursework:} List of relevant courses you have taken.
+    \item \textbf{Programming:} List of programming languages you are proficient in.
+    \item \textbf{Software:} List of software you are proficient in.
+    \item \textbf{Communication:} List of communication skills you possess.
 \end{itemize}
 
-% End document
+
 \end{document}
