--- a/Resume.tex
+++ b/Resume.tex
@@ -16,81 +16,100 @@
 \pagestyle{empty}
 
 \begin{center}
-    \textbf{\Large Srivathsan S}\\[2pt] 
+    \textbf{\Large Srivathsan S}\\[2pt]
     Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.linkedin.com/in/vathsan64}{linkedin.com/in/vathsan64} | Chennai,
     India 
 \end{center}
 
-
 \section*{EDUCATION}
 \noindent
-\textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\ 
-Masters in Physics - Quantum Technologies\\
+\textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\[1pt] 
+Masters in Physics - Quantum Technologies\\[1pt]
 Coursework: Introduction to Quantum Information Science, Open Quantum Systems, Quantum Materials and Nanophotonics, Quantum Computation and
-Algorithms, Physical Implementations of Quantum Technology\\
+Algorithms, Physical Implementations of Quantum Technology, Machine Learning.
 
 \noindent
-\textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\ 
-Bachelor of Technology - Information and Communication Technology\\
+\textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\[1pt] 
+Bachelor of Technology - Information and Communication Technology\\[1pt]
 Coursework: Data Structures and Algorithms, Machine Learning, Artificial Intelligence, Cryptography, Theory of Computation, Data Mining,
 DBMS, Operating Systems, Networking.
 
 \section*{EXPERIENCE}
 \noindent
-\textbf{Tata Consultancy Services} \hfill Chennai, India\\
-\textit{Systems Engineer} \hfill Nov 2020 - Jul 2023\\
+\textbf{Tata Consultancy Services}\\[1pt]
+\textit{Systems Engineer} \hfill Nov 2020 - Jul 2023\\[1pt]
 Develop, Maintain and Upgrade legacy systems of client Kemper Insurance in BFSI Domain in the Unix and PL/SQL tech stack.
 Spearheaded and Initiated many projects to alleviate technology bottleneck by gaining the Contextual Master level in the
-domain.\\
+domain.
 
 \noindent
-\textbf{Freezon Labs} \hfill Chennai, India\\
-\textit{Full Stack Developer} \hfill Jul 2020 - Oct 2020\\
+\textbf{Freezon Labs}\\[1pt]
+\textit{Full Stack Developer} \hfill Jul 2020 - Oct 2020\\[1pt]
 Design and develop as part of a 2-man team an Invoice Processing Machine Learning pipeline in React and Flask called Finvoice.
-The Machine learning algorithm detected tables and text and classified it based on context which can be viewed in specially designed dashboard.\\
+The Machine learning algorithm detected tables and text and classified it based on context which can be viewed in specially designed dashboard.
 
 \noindent
-\textbf{Tata Consultancy Services} \hfill Chennai, India\\
-\textit{Developer Intern} \hfill Jan 2020 - Apr 2020\\
+\textbf{Tata Consultancy Services}\\[1pt]
+\textit{Developer Intern} \hfill Jan 2020 - Apr 2020\\[1pt]
 Worked on developing a mobile application in Flutter Framework as part of a software suite. Also analysed on different ways of
-Unit and Integration testing a Flutter app and deployment to a CI/CD pipeline.\\
+Unit and Integration testing a Flutter app and deployment to a CI/CD pipeline.
 
 \noindent
-\textbf{Poornaprajna Institute of Scientific Research} \hfill Bengaluru, India\\
-\textit{Student Intern} \hfill May 2019 - Jun 2019\\
+\textbf{Poornaprajna Institute of Scientific Research}\\[1pt]
+\textit{Student Intern} \hfill May 2019 - Jun 2019\\[1pt]
 Attended leactures by Prof. R.Srikant on Mathematical methods of Physics such as Vector Spaces, Partial Differential Equations; Fourier and Laplace transforms, Lagrangian and Hamiltonian Interpretations, Solving Schrodinger’s
-Equation for various scenarios.\\
+Equation for various scenarios.
 
 \noindent
-\textbf{Synergita Systems} \hfill Chennai, India\\
-\textit{Developer Intern} \hfill Nov 2018 - Dec 2018\\
+\textbf{Synergita Systems}\\[1pt]
+\textit{Developer Intern} \hfill Nov 2018 - Dec 2018\\[1pt]
 Learnt and researched the various methods of analysing data in Natural Language Processing. Designed and Implemented a
 program to automatically categorise company support tickets into various departments using LDA and Guided LDA.
 
 \section*{PROJECTS}
 \noindent
-\textbf{iGEM 2019} \hfill \url{https://2019.igem.org/Team:SASTRA_Thanjavur}\\
+\textbf{iGEM 2019} \hfill \url{https://2019.igem.org/Team:SASTRA_Thanjavur}\\[1pt]
 Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
 Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
 Markers.
 
 \noindent
-\textbf{SASTRA Mess App} \hfill \url{https://yumsastra.vathzen.in}\\
+\textbf{SASTRA Mess App} \hfill \url{https://yumsastra.vathzen.in}\\[1pt]
 Developed a Mobile App for ordering food in College Mess. Full stack development of the app includes a Golang backend,
 Postgres Database and Ionic Frontend.
 
 \noindent
-\textbf{National Disaster Management App}\\
+\textbf{National Disaster Management App}\\[1pt]
 Developed Backend for a Mobile Application as part of SASTRA University team for the Govt. of Tamilnadu for the use of
-Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.\\
+Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.
+
+\noindent
+\textbf{Open Source Development} \hfill \url{https://github.com/vathzen}\\[1pt]
+Contributing and maintaining Open Source Projects on GitHub including my personal website and experimenting and learning with various Quantum SDKs such as Qiskit. Also contains
+the website and apps developed for various MSMEs on a freelance basis.
+
+\section*{PUBLICATIONS}
+\noindent
+\textbf{Detection and Prediction of Schizophrenia Using Magnetic Resonance Images and Deep Learning}\\[1pt]
+\textit{S. Srivathsan, B. Sreenithi, J. Naren}\\[1pt]
+Cognitive Informatics and Soft Computing. Advances in Intelligent Systems and Computing, vol 1040. Springer, Singapore.
+
+\noindent
+\textbf{Computer Aided System for Autism Spectrum Disorder Using Deep Learning Methods}\\[1pt]
+\textit{K. Sairam, J. Naren, Dr. G. Vithya, S. Srivathsan}\\[1pt]
+International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.
+
+\noindent
+\textbf{Supporting Individuals with Autistic Spectrum Disorder with Various Technologies: A Review}\\[1pt]
+\textit{J. Naren, Dr. G. Vithya, S. Srivathsan, Bharath Reddy}\\[1pt]
+International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.
 
 \section*{SKILLS}
 \begin{itemize}
-    \item \textbf{Relevant Coursework:} List of relevant courses you have taken.
-    \item \textbf{Programming:} List of programming languages you are proficient in.
-    \item \textbf{Software:} List of software you are proficient in.
-    \item \textbf{Communication:} List of communication skills you possess.
+    \item \textbf{Programming:} C++, Python, Go, Java.
+    \item \textbf{Software:} Git, Unix, Google Cloud Certification.
+    \item \textbf{Frameworks:} Oracle, Postgres, ReactJS, Scipy, Qiskit.
+    \item \textbf{Certifications:} QBronze, QSilver.
 \end{itemize}
-
 
 \end{document}
