--- a/Resume.tex
+++ b/Resume.tex
@@ -17,8 +17,7 @@
 
 \begin{center}
     \textbf{\Large Srivathsan S}\\[2pt]
-    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.linkedin.com/in/vathsan64}{linkedin.com/in/vathsan64} | Chennai,
-    India 
+    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.vathzen.in}{vathzen.in} | Chennai, India 
 \end{center}
 
 \section*{EDUCATION}
