--- a/Resume.tex
+++ b/Resume.tex
@@ -4,6 +4,7 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage{hyperref}
+\RequirePackage{fontawesome}
 
 \geometry{a4paper, margin=0.3in} 
 \setlist{noitemsep} 
@@ -17,15 +18,15 @@
 
 \begin{center}
     \textbf{\Large Srivathsan S}\\[2pt]
-    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.vathzen.in}{vathzen.in} | Chennai, India 
+    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.vathzen.in}{vathzen.in \faExternalLink} | Chennai, India 
 \end{center}
 
 \section*{EDUCATION}
 \noindent
 \textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\[1pt] 
 Masters in Physics - Quantum Technologies\\[1pt]
-Coursework: Introduction to Quantum Information Science, Open Quantum Systems, Quantum Materials and Nanophotonics, Quantum Computation and
-Algorithms, Physical Implementations of Quantum Technology, Machine Learning.
+Coursework: Quantum Information Science, Open Quantum Systems and Thermodynamics, Quantum Materials and Nanophotonics, Quantum Computation and
+Algorithms, Physical Implementations of Quantum Technology, Quantum Machine Learning, Introduction to Tensor Networks.\\[1pt]
 
 \noindent
 \textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\[1pt] 
@@ -37,21 +38,9 @@ DBMS, Operating Systems, Networking.
 \noindent
 \textbf{Tata Consultancy Services}\\[1pt]
 \textit{Systems Engineer} \hfill Nov 2020 - Jul 2023\\[1pt]
-Develop, Maintain and Upgrade legacy systems of client Kemper Insurance in BFSI Domain in the Unix and PL/SQL tech stack.
+Develop, Maintain and Upgrade legacy systems of client Kemper Insurance in BFSI Domain in the Unix and Python tech stack.
 Spearheaded and Initiated many projects to alleviate technology bottleneck by gaining the Contextual Master level in the
-domain.
-
-\noindent
-\textbf{Freezon Labs}\\[1pt]
-\textit{Full Stack Developer} \hfill Jul 2020 - Oct 2020\\[1pt]
-Design and develop as part of a 2-man team an Invoice Processing Machine Learning pipeline in React and Flask called Finvoice.
-The Machine learning algorithm detected tables and text and classified it based on context which can be viewed in specially designed dashboard.
-
-\noindent
-\textbf{Tata Consultancy Services}\\[1pt]
-\textit{Developer Intern} \hfill Jan 2020 - Apr 2020\\[1pt]
-Worked on developing a mobile application in Flutter Framework as part of a software suite. Also analysed on different ways of
-Unit and Integration testing a Flutter app and deployment to a CI/CD pipeline.
+domain.\\
 
 \noindent
 \textbf{Poornaprajna Institute of Scientific Research}\\[1pt]
@@ -59,31 +48,20 @@ Unit and Integration testing a Flutter app and deployment to a CI/CD pipeline.
 Attended leactures by Prof. R.Srikant on Mathematical methods of Physics such as Vector Spaces, Partial Differential Equations; Fourier and Laplace transforms, Lagrangian and Hamiltonian Interpretations, Solving Schrodinger’s
 Equation for various scenarios.
 
-\noindent
-\textbf{Synergita Systems}\\[1pt]
-\textit{Developer Intern} \hfill Nov 2018 - Dec 2018\\[1pt]
-Learnt and researched the various methods of analysing data in Natural Language Processing. Designed and Implemented a
-program to automatically categorise company support tickets into various departments using LDA and Guided LDA.
-
 \section*{PROJECTS}
 \noindent
-\textbf{iGEM 2019} \hfill \url{https://2019.igem.org/Team:SASTRA_Thanjavur}\\[1pt]
+\textbf{iGEM 2019} \hfill \href{https://2019.igem.org/Team:SASTRA_Thanjavur}{House of Toeholds \faExternalLink}\\[1pt]
 Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
 Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
-Markers.
-
-\noindent
-\textbf{SASTRA Mess App} \hfill \url{https://yumsastra.vathzen.in}\\[1pt]
-Developed a Mobile App for ordering food in College Mess. Full stack development of the app includes a Golang backend,
-Postgres Database and Ionic Frontend.
+Markers.\\
 
 \noindent
 \textbf{National Disaster Management App}\\[1pt]
 Developed Backend for a Mobile Application as part of SASTRA University team for the Govt. of Tamilnadu for the use of
-Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.
+Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.\\
 
 \noindent
-\textbf{Open Source Development} \hfill \url{https://github.com/vathzen}\\[1pt]
+\textbf{Open Source Development} \hfill \href{https://github.com/vathzen}{ Github \faExternalLink}\\[1pt]
 Contributing and maintaining Open Source Projects on GitHub including my personal website and experimenting and learning with various Quantum SDKs such as Qiskit. Also contains
 the website and apps developed for various MSMEs on a freelance basis.
 
@@ -91,24 +69,33 @@ the website and apps developed for various MSMEs on a freelance basis.
 \noindent
 \textbf{Detection and Prediction of Schizophrenia Using Magnetic Resonance Images and Deep Learning}\\[1pt]
 \textit{S. Srivathsan, B. Sreenithi, J. Naren}\\[1pt]
-Cognitive Informatics and Soft Computing. Advances in Intelligent Systems and Computing, vol 1040. Springer, Singapore.
+Cognitive Informatics and Soft Computing. Advances in Intelligent Systems and Computing, vol 1040. Springer, Singapore.\\
 
 \noindent
 \textbf{Computer Aided System for Autism Spectrum Disorder Using Deep Learning Methods}\\[1pt]
 \textit{K. Sairam, J. Naren, Dr. G. Vithya, S. Srivathsan}\\[1pt]
-International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.
+International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.\\
 
 \noindent
 \textbf{Supporting Individuals with Autistic Spectrum Disorder with Various Technologies: A Review}\\[1pt]
 \textit{J. Naren, Dr. G. Vithya, S. Srivathsan, Bharath Reddy}\\[1pt]
-International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.
+International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.\\
 
 \section*{SKILLS}
 \begin{itemize}
     \item \textbf{Programming:} C++, Python, Go, Java.
     \item \textbf{Software:} Git, Unix, Google Cloud Certification.
-    \item \textbf{Frameworks:} Oracle, Postgres, ReactJS, Scipy, Qiskit.
+    \item \textbf{Frameworks:} Scipy, Qiskit, Tensorflow*.
     \item \textbf{Certifications:} QBronze, QSilver.
+\end{itemize}
+
+\section*{OTHERS}
+\begin{itemize}
+    \item Other Internship and Project Experiences can be found in \href{https://www.vathzen.in/}{my website \faExternalLink}.
+    \item Currently learning HPC Stack with OpenCUDA and Julia.
+    \item Google Scholar Profile : \href{https://scholar.google.com/citations?user=m2CQUnsAAAAJ}{S Srivathsan \faExternalLink}
+    \item \textbf{Software:} Git, Unix, Google Cloud Certification.
+    \item \textbf{Frameworks:} Scipy, Qiskit.
 \end{itemize}
 
 \end{document}
