added cs resume ig

--- a/Resume.tex
+++ b/Resume.tex
@@ -4,6 +4,7 @@
 \usepackage{titlesec}
 \usepackage{enumitem}
 \usepackage{hyperref}
+\RequirePackage{fontawesome}
 
 \geometry{a4paper, margin=0.3in} 
 \setlist{noitemsep} 
@@ -17,15 +18,16 @@
 
 \begin{center}
     \textbf{\Large Srivathsan S}\\[2pt]
-    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.vathzen.in}{vathzen.in} | Chennai, India 
+    Dublin, Ireland | \href{mailto:srivaths311@gmail.com}{srivaths311@gmail.com} | (+353) 899 821 465 | \href{https://www.vathzen.in}{vathzen.in \faExternalLink} | Chennai, India 
 \end{center}
 
 \section*{EDUCATION}
 \noindent
 \textbf{Trinity College, Dublin}, Dublin, Ireland \hfill Sep 2023 - Expected: Aug 2024\\[1pt] 
 Masters in Physics - Quantum Technologies\\[1pt]
-Coursework: Introduction to Quantum Information Science, Open Quantum Systems, Quantum Materials and Nanophotonics, Quantum Computation and
-Algorithms, Physical Implementations of Quantum Technology, Machine Learning.
+Coursework: Quantum Information Science, Open Quantum Systems and Thermodynamics, Quantum Materials and Nanophotonics,
+Quantum Computation and Algorithms, Physical Implementations of Quantum Technology, Quantum Machine Learning, Introduction to
+Tensor Networks.
 
 \noindent
 \textbf{SASTRA University, Thanjavur}, Tamilnadu, India \hfill Jul 2016 - May 2020\\[1pt] 
@@ -67,13 +69,13 @@ program to automatically categorise company support tickets into various departm
 
 \section*{PROJECTS}
 \noindent
-\textbf{iGEM 2019} \hfill \url{https://2019.igem.org/Team:SASTRA_Thanjavur}\\[1pt]
+\textbf{iGEM 2019} \hfill \href{https://2019.igem.org/Team:SASTRA_Thanjavur}{House of Toeholds \faExternalLink}\\[1pt]
 Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
 Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
 Markers.
 
 \noindent
-\textbf{SASTRA Mess App} \hfill \url{https://yumsastra.vathzen.in}\\[1pt]
+\textbf{SASTRA Mess App} \hfill \href{https://yumsastra.vathzen.in}{Yum Sastra \faExternalLink}\\[1pt]
 Developed a Mobile App for ordering food in College Mess. Full stack development of the app includes a Golang backend,
 Postgres Database and Ionic Frontend.
 
@@ -83,7 +85,7 @@ Developed Backend for a Mobile Application as part of SASTRA University team for
 Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.
 
 \noindent
-\textbf{Open Source Development} \hfill \url{https://github.com/vathzen}\\[1pt]
+\textbf{Open Source Development} \hfill \href{https://yumsastra.vathzen.in}{Github \faExternalLink}\\[1pt]
 Contributing and maintaining Open Source Projects on GitHub including my personal website and experimenting and learning with various Quantum SDKs such as Qiskit. Also contains
 the website and apps developed for various MSMEs on a freelance basis.
 
@@ -105,10 +107,9 @@ International Journal of Psychosocial Rehabilitation, Vol 23 Issue 1,2019.
 
 \section*{SKILLS}
 \begin{itemize}
-    \item \textbf{Programming:} C++, Python, Go, Java.
+    \item \textbf{Programming:} C++, Python, Go, Java, Julia*.
     \item \textbf{Software:} Git, Unix, Google Cloud Certification.
     \item \textbf{Frameworks:} Oracle, Postgres, ReactJS, Scipy, Qiskit.
-    \item \textbf{Certifications:} QBronze, QSilver.
 \end{itemize}
 
 \end{document}
