--- a/Resume.tex
+++ b/Resume.tex
@@ -50,15 +50,15 @@ Equation for various scenarios.
 
 \section*{PROJECTS}
 \noindent
+\textbf{Master's Thesis - Trinity College Dublin*}\\[1pt]
+Working on my Master's Research Thesis Topic titled "\textbf{Evaluating the Distance from Quantum Objective States}" where I research
+quantum discord measure from SBS states under Prof. Felix Binder as part of the Quantum Information Theory Group.\\
+
+\noindent
 \textbf{iGEM 2019} \hfill \href{https://2019.igem.org/Team:SASTRA_Thanjavur}{House of Toeholds \faExternalLink}\\[1pt]
 Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
 Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
 Markers.\\
-
-\noindent
-\textbf{National Disaster Management App}\\[1pt]
-Developed Backend for a Mobile Application as part of SASTRA University team for the Govt. of Tamilnadu for the use of
-Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.\\
 
 \noindent
 \textbf{Open Source Development} \hfill \href{https://github.com/vathzen}{ Github \faExternalLink}\\[1pt]
