--- a/Resume.tex
+++ b/Resume.tex
@@ -69,6 +69,11 @@ program to automatically categorise company support tickets into various departm
 
 \section*{PROJECTS}
 \noindent
+\textbf{Master's Thesis - Trinity College Dublin*}\\[1pt]
+Working on my Master's Research Thesis Topic titled "\textbf{Evaluating the Distance from Quantum Objective States}" where I research
+quantum discord measure from SBS states under Prof. Felix Binder as part of the Quantum Information Theory Group.
+
+\noindent
 \textbf{iGEM 2019} \hfill \href{https://2019.igem.org/Team:SASTRA_Thanjavur}{House of Toeholds \faExternalLink}\\[1pt]
 Part of the college team that won Silver Medal in iGEM 2019, Boston. Developed the Project Website and Machine Learning
 Classifier for identifying optimal toehold switch design based on physical parameters towards detection of Cervical Cancer
@@ -78,11 +83,6 @@ Markers.
 \textbf{SASTRA Mess App} \hfill \href{https://yumsastra.vathzen.in}{Yum Sastra \faExternalLink}\\[1pt]
 Developed a Mobile App for ordering food in College Mess. Full stack development of the app includes a Golang backend,
 Postgres Database and Ionic Frontend.
-
-\noindent
-\textbf{National Disaster Management App}\\[1pt]
-Developed Backend for a Mobile Application as part of SASTRA University team for the Govt. of Tamilnadu for the use of
-Thanjavur City. App was used by the people report and restore city infrastructure after frequent cyclones.
 
 \noindent
 \textbf{Open Source Development} \hfill \href{https://yumsastra.vathzen.in}{Github \faExternalLink}\\[1pt]
